# low-power-api-market

./: .gitignore  DEPLOY.md
dashboard/: index.html  package.json
dashboard/src/: index.css  main.tsx
dashboard/src/api/: client.ts
dashboard/src/components/: Layout.tsx  MetricCard.tsx
dashboard/src/pages/: ApiKeysPage.tsx  BillingPage.tsx  DashboardPage.tsx  DocsPage.tsx
gateway/: .env.example  package-lock.json  package.json  schema.sql
gateway/src/: index.ts
gateway/src/config/: env.ts
gateway/src/db/: index.ts
gateway/src/middleware/: auth.ts  errorHandler.ts  metering.ts  rateLimiter.ts
gateway/src/routes/: billing.ts  currency.ts  email.ts  geo.ts  health.ts  keys.ts  weather.ts
gateway/src/services/: apiKeys.ts  cache.ts  metrics.ts  stripe.ts  usage.ts
gateway/src/types/: index.ts
rust-services/: Cargo.toml
rust-services/currency-calc/: Cargo.toml
rust-services/currency-calc/src/: main.rs
rust-services/geo-normalizer/: Cargo.toml
rust-services/geo-normalizer/src/: main.rs
rust-services/shared/src/: lib.rs
