[package]
name = "currency-calc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "currency-calc"
path = "src/main.rs"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shared = { path = "../shared" }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
