[package]
name = "geo-normalizer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "geo-normalizer"
path = "src/main.rs"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shared = { path = "../shared" }
tokio = { version = "1", features = ["full"] }
iso_country = "0.2"
